--- a/styles/details.css
+++ b/styles/details.css
@@ -1,5 +1,7 @@
 /* You need to create the rest of styles for the layout shown */
-
+.choices {
+    display: flex;
+}
 .options {
     flex-basis: 24%;
     margin: 0 2rem;
@@ -9,3 +11,8 @@
     box-shadow: 0.25rem 0.25rem 0.5rem rgb(143, 143, 143);
 }
 
+.jewelryOptions ul{
+    display: flex;
+    flex-direction: row;
+    margin-top: 2rem;
+}
